--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="DefaultText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/amaranth_bold</item>
+    </style>
+
 </resources>
