--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -24,15 +24,16 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/download_icon" />
 
     <RadioGroup
+        android:id="@+id/downloadRadioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/custom_button"
@@ -42,7 +43,7 @@
         app:layout_constraintVertical_bias="0.32999998">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/glideRadioBtn"
             style="@style/DefaultText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,7 +51,7 @@
             android:text="@string/radioBtn_text1" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/loadAppRadioBtn"
             style="@style/DefaultText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,7 +60,7 @@
             android:textStyle="normal" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/retrofitRadioBtn"
             style="@style/DefaultText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
