--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,13 @@
 
     <style name="DefaultText">
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/amaranth_bold</item>
+    </style>
+    <style name="DefaultTextLight">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/amaranth</item>
     </style>
 
 </resources>
